--- a/my-java-project/pom.xml
+++ b/my-java-project/pom.xml
@@ -2,10 +2,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Comercio</groupId>
-  <artifactId>my-java-project</artifactId>
+  <artifactId>executable</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>my-java-project</name>
+  <version>1.0</version>
+  <name>Comercio</name>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -15,4 +19,23 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+
+  <plugins>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jar-plugin</artifactId>
+		<version>3.1.0</version>
+		<configuration>
+			<archive>
+				<manifest>
+					<addClasspath>true</addClasspath>
+					<mainClass>Comercio.App</mainClass>
+				</manifest>
+			</archive>
+		</configuration>
+    </plugin>
+  </plugins>
+  </build>
 </project>
+
